<resources>
    <string name="gifts">Gifts</string>
    <string name="flower">Flower</string>
    <string name="rocket">Rocket</string>
    <string name="accept">Accept</string>
    <string name="exit">Exit</string>
    <string name="disconnect">Disconnect</string>
    <string name="go_live">Go LIVE</string>
    <string name="no_live">No LIVE now.</string>
    <string name="mute">Mute</string>
    <string name="stop_video">Stop Video</string>
    <string name="add_guests">Add guests</string>
    <string name="quit">Quit</string>
    <string name="no_audience">No audience</string>
    <string name="battle">Battle</string>
    <string name="no_hosts_live">No hosts are broadcasting LIVE</string>
    <string name="live_interact_together">Go LIVE together</string>
    <string name="request_live">Request</string>
    <string name="waiting_approval">Waiting for approval.</string>
    <string name="mic_off">Mic off.</string>
    <string name="camera_closed">Camera closed.</string>
    <string name="sent">sent</string>
    <string name="request_sent_waiting">Request sent. Waiting for approval.</string>
    <string name="click_seat_title">Click gallery view to manage the seat</string>
    <string name="live_ended_title">LIVE ended. Go back to the list page</string>
    <string name="parameters_error">Invalid parameters</string>
    <string name="disconnected">Disconnected</string>
    <string name="quit_title">Are you sure to quit?</string>
    <string name="host_connect_error">A host is in your room. Failed to add a guest</string>
    <string name="xxx_waiting_response">%s invited. Waiting for response.</string>
    <string name="host_liveing">The host is starting co-hosting.</string>
    <string name="sure_quit">Are you sure to quit?</string>
    <string name="end_live_title">Confirm</string>
    <string name="joined">joined</string>
    <string name="left">left</string>
    <string name="off_camera_title">The host has turned off your camera</string>
    <string name="off_mic_title">You\'re muted</string>
    <string name="host_back_soon">The host\'ll be back soon</string>
    <string name="guest_back_soon">The guest\'ll be back soon</string>
    <string name="live_together_invited">You\'re invited to go LIVE together</string>
    <string name="xxx_join_live">%s wants to be in your LIVE</string>
    <string name="xxx_declines_invite">%s declines your invitation</string>
    <string name="request_declined">Your request declined.</string>
    <string name="start_live_soon">Request accepted. You\'ll join the LIVE soon.</string>
    <string name="xxxinvites_live">%s invites you to co-hosting</string>
    <string name="not_available_live">Your invitation is declined. The host is not available now.</string>
    <string name="xxxdisconnected_live">%s has disconnected with you</string>
    <string name="host_disconnected_live">The host has disconnected with you</string>
    <string name="xxxsure_stop_live">%s people connected. Are you sure to disconnect?</string>
    <string name="connecting">Connecting</string>
    <string name="invite">Invite</string>
    <string name="host_arriving_soon">The host is arriving soon. Please wait.</string>
    <string name="requesting">Requesting</string>
    <string name="Initiate_live">Request sent. Waiting for approval.</string>
    <string name="Initiate_send_waiting">Invitation sent. Waiting for responding.</string>
    <string name="Initiate_send">Invited</string>
    <string name="Initiate_xxx_send_waiting">Invitation to %s has been sent. Waiting for responding.</string>
    <string name="host_live">Host connection</string>
    <string name="create_live">Create a LIVE</string>
    <string name="audience_connection_error">A guest is in your room. Failed to add a host</string>
    <string name="host_connection_error">A host is in your room. Failed to add a guest</string>
    <string name="xxxsent_connection_request">Guest request from %s</string>
    <string name="will_start_live">Request accepted. You\'ll join the LIVE soon.</string>
    <string name="disconnect_live">Disconnect</string>
    <string name="disconnect_host_live">Sure to disconnect?</string>
    <string name="xxxrefuses_connect">%s declined your invitation</string>
    <string name="end_live_alert">Are you sure end this LIVE？</string>
    <string name="room_id">Room ID</string>
    <string name="interact_live_connecting">Connecting</string>
</resources>