<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_live_users_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="14dp">

    <TextView
        android:id="@+id/close_connect_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/mic_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/mute"
        android:textColor="#22E5E6EB"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/camera_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/stop_video"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dismiss_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="16sp" />


</LinearLayout>