<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:background="#272E3B"
    android:minHeight="150dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/gifts"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/flower_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/flower_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/rocket_icon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/flower_text"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/flower"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/flower_icon"
        app:layout_constraintRight_toRightOf="@id/flower_icon"
        app:layout_constraintTop_toBottomOf="@id/flower_icon" />

    <ImageView
        android:id="@+id/rocket_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:src="@drawable/rocket_icon"
        app:layout_constraintLeft_toRightOf="@id/flower_icon"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/rocket_text"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/rocket"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/rocket_icon"
        app:layout_constraintRight_toRightOf="@id/rocket_icon"
        app:layout_constraintTop_toBottomOf="@id/rocket_icon" />

    <View
        android:id="@+id/flower_click"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/flower_text"
        app:layout_constraintLeft_toLeftOf="@id/flower_icon"
        app:layout_constraintRight_toRightOf="@id/flower_icon"
        app:layout_constraintTop_toTopOf="@id/flower_icon" />

    <View
        android:id="@+id/rocket_click"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/rocket_text"
        app:layout_constraintLeft_toLeftOf="@id/rocket_icon"
        app:layout_constraintRight_toRightOf="@id/rocket_icon"
        app:layout_constraintTop_toTopOf="@id/rocket_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>