<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="#333">

    <TextView
        android:id="@+id/single_head_tv"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:background="@drawable/default_header_bg"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="80sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/single_video_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/single_network_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="90dp"
        android:drawableLeft="@drawable/net_status_good"
        android:drawablePadding="4dp"
        android:text="@string/net_excellent"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/single_mic_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/mic_off_1x"
        android:drawablePadding="4dp"
        android:text="@string/mic_off"
        android:textColor="@color/white"
        android:textSize="11sp"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="@id/single_network_status_tv"
        app:layout_constraintTop_toBottomOf="@id/single_network_status_tv"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/single_camera_status_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:drawableLeft="@drawable/camera_off_1x"
        android:drawablePadding="4dp"
        android:text="@string/camera_closed"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintLeft_toLeftOf="@id/single_mic_status_tv"
        app:layout_constraintTop_toBottomOf="@id/single_mic_status_tv" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/host_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.5"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/host_video_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintWidth_percent="0.5">

            <FrameLayout
                android:id="@+id/host_video_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/host_head_tv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:background="@drawable/default_header_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/host_network_status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/net_status_good"
                    android:drawablePadding="4dp"
                    android:text="@string/net_excellent"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/host_mic_status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/mic_off_1x"
                    android:drawablePadding="4dp"
                    android:text="@string/mic_off"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/host_camera_status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/camera_off_1x"
                    android:drawablePadding="4dp"
                    android:text="@string/camera_closed"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

            </LinearLayout>
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/co_host_video_layout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintWidth_percent="0.5">

            <FrameLayout
                android:id="@+id/co_host_video_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/co_host_head_tv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/default_header_bg"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/co_host_network_status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/net_status_good"
                    android:drawablePadding="4dp"
                    android:text="@string/net_excellent"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/co_host_mic_status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/mic_off_1x"
                    android:drawablePadding="4dp"
                    android:text="@string/mic_off"
                    android:textColor="@color/white"
                    android:textSize="11sp" />

                <TextView
                    android:id="@+id/co_host_camera_status_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:drawableLeft="@drawable/camera_off_1x"
                    android:drawablePadding="4dp"
                    android:text="@string/camera_closed"
                    android:textColor="@color/white"
                    android:textSize="11sp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/co_host_audio"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginLeft="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/guest_audio_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/co_host_audio"
                app:layout_constraintRight_toRightOf="parent">

                <com.volcengine.vertcdemo.interactivelive.view.AvatarView
                    android:id="@+id/co_host_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right" />
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:background="@drawable/icon_connecting"
            android:gravity="center"
            android:text="@string/interact_live_connecting"
            android:textColor="@color/white"
            android:textSize="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>